feature: Add bruteforce prevention model

--- a/config/environments/prod.env
+++ b/config/environments/prod.env
@@ -1,1 +1,34 @@
-NODE_ENV = production
+# For the production environment, either use this file with an
+# environment polluter, or just directly set environment variables
+# according to this file
+
+# Server environment
+NODE_ENV                = "production"
+DEBUG                   = "app:*"
+
+# App
+APP_NAME                = "Ecom"
+APP_SHORT_NAME          = "Ecom"
+
+# Database
+MONGODB_URL             = "mongodb+srv://admin:0XBsXL1Z71JnHuk8@cluster-0.dc8lnxi.mongodb.net/ecom?retryWrites=true&w=majority"
+
+# URLs
+PORT                    = "8081"
+BASE_URL                = "http://localhost:8081"
+API_V1_URL              = "api"
+
+# CORS
+ALLOWED_ORIGINS         = "'null'"
+
+# Security
+JWT_SECRET              = "nc9Hmnhh85QVik"
+ACCESS_TOKEN_SECRET     = "nc9Hmnhh85QVik"
+ACCESS_TOKEN_VALIDITY   = "1000d"
+REQUEST_TOKEN_SECRET    = "nc9Hmnhh85QVik"
+REQUEST_TOKEN_VALIDITY  = "1000d"
+CLIENT_SECRET_SECRET    = "nc9Hmnhh85QVik"
+OTP_VALIDITY            = "1200000"
+
+# OTP
+BCRYPT_SALT_ROUNDS      = 4
