--- a/config/environments/dev.env
+++ b/config/environments/dev.env
@@ -10,11 +10,11 @@ APP_SHORT_NAME          = "Ecom"
 MONGODB_URL             = "mongodb+srv://admin:0XBsXL1Z71JnHuk8@cluster-0.dc8lnxi.mongodb.net/ecom?retryWrites=true&w=majority"
 
 # URLs
-BASE_URL                = "http://localhost:8080"
+BASE_URL                = "http://localhost:8081"
 API_V1_URL              = "api"
 
 # CORS
-ALLOWED_ORIGINS         = "'null', 'https://kyism.ga'"
+ALLOWED_ORIGINS         = "'null'"
 
 # Security
 JWT_SECRET              = "nc9Hmnhh85QVik"
